--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,3 @@
 {
-    "extends": ["next/babel", "next/core-web-vitals"],
-    "plugins": ["@babel/plugin-proposal-do-expressions"]
+    "extends": ["next/babel", "next/core-web-vitals"]
 }
