--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     },
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "prisma generate && next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "postinstall": "prisma generate"
     },
     "dependencies": {
         "@heroicons/react": "^2.0.18",
@@ -25,7 +26,8 @@
         "next": "13.4.10",
         "openai": "^3.3.0",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "sharp": "^0.32.4"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.9",
